[gd_scene load_steps=51 format=3 uid="uid://b302iyi2my1wc"]

[ext_resource type="Script" path="res://player.gd" id="1_k82fs"]
[ext_resource type="Texture2D" uid="uid://cn8ok78ftkksd" path="res://assets/cats 2d/ThreeColorPaid/ThreeColorPaid/IdleCatt.png" id="1_vm587"]
[ext_resource type="Texture2D" uid="uid://bno6aupsd24lb" path="res://assets/cats 2d/ThreeColorPaid/ThreeColorPaid/Idle2Catt.png" id="2_x82r7"]
[ext_resource type="Texture2D" uid="uid://c4jj5o0600u8c" path="res://assets/cats 2d/ThreeColorPaid/ThreeColorPaid/AttackCatt.png" id="3_q3igc"]
[ext_resource type="Texture2D" uid="uid://hmgkas6b2hqe" path="res://assets/cats 2d/ThreeColorPaid/ThreeColorPaid/Die.png" id="4_tfdw1"]
[ext_resource type="Texture2D" uid="uid://cg8m2tfda0ime" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File1.png" id="4_u6bq7"]
[ext_resource type="Texture2D" uid="uid://cpkhycytkqmvc" path="res://assets/cats 2d/ThreeColorPaid/ThreeColorPaid/DieCatt.png" id="5_iavcn"]
[ext_resource type="Texture2D" uid="uid://ccqq0bil5qotp" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File2.png" id="5_v2slh"]
[ext_resource type="Texture2D" uid="uid://csbpst64f8lh5" path="res://assets/cats 2d/ThreeColorPaid/ThreeColorPaid/HurtCattt.png" id="6_4cas1"]
[ext_resource type="Texture2D" uid="uid://blrmcud6kdvf7" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File11.png" id="6_8pxwe"]
[ext_resource type="Texture2D" uid="uid://jcxmjre35lic" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File12.png" id="7_i3bpx"]
[ext_resource type="Texture2D" uid="uid://dnjxa0oygdrxa" path="res://assets/cats 2d/ThreeColorPaid/ThreeColorPaid/JumpCattt.png" id="7_y0fdc"]
[ext_resource type="Texture2D" uid="uid://27x2klvn51cw" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File13.png" id="8_fg6ks"]
[ext_resource type="Texture2D" uid="uid://dci5p0cefrxbw" path="res://assets/cats 2d/ThreeColorPaid/ThreeColorPaid/RunCatt.png" id="8_m148u"]
[ext_resource type="Texture2D" uid="uid://drc823c88jbp6" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File14.png" id="9_hk0g3"]
[ext_resource type="Texture2D" uid="uid://01yuk7fxcvc7" path="res://assets/cats 2d/ThreeColorPaid/ThreeColorPaid/Sittingg.png" id="9_rhhh8"]
[ext_resource type="Texture2D" uid="uid://b701bt1n3o6pe" path="res://assets/cats 2d/ThreeColorPaid/ThreeColorPaid/SleepCatt.png" id="10_e6n4b"]
[ext_resource type="Texture2D" uid="uid://c7da7w1vumvx3" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File15.png" id="10_kacak"]
[ext_resource type="Texture2D" uid="uid://dj00adlk0r7nf" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File16.png" id="11_7cg3l"]
[ext_resource type="FontFile" uid="uid://bmo4secrlmn3g" path="res://assets/fonts/Fibberish v1.0/fibberish.ttf" id="11_fl8ui"]
[ext_resource type="Texture2D" uid="uid://bhet5b4mjjlad" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File17.png" id="12_y6ql2"]
[ext_resource type="Texture2D" uid="uid://cohtpued4hdup" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File18.png" id="13_3iwlo"]
[ext_resource type="AudioStream" uid="uid://b4p325g6tj465" path="res://assets/sfx/jump.wav" id="13_uisnj"]
[ext_resource type="AudioStream" uid="uid://b0620qwlcf5hr" path="res://assets/sfx/attack.wav" id="14_637ts"]
[ext_resource type="Texture2D" uid="uid://b5n0csousxvso" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File19.png" id="14_u48ws"]
[ext_resource type="Texture2D" uid="uid://dor0n1wkw32jc" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File20.png" id="15_12ouc"]
[ext_resource type="Texture2D" uid="uid://cbhsg7fynsiiu" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File3.png" id="16_krk36"]
[ext_resource type="Texture2D" uid="uid://bykp1i40swsbs" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File4.png" id="17_gdedb"]
[ext_resource type="Texture2D" uid="uid://dge4uee4hkc0q" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File5.png" id="18_y7316"]
[ext_resource type="Texture2D" uid="uid://bkiys44ombt5r" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File6.png" id="19_vrb62"]
[ext_resource type="Texture2D" uid="uid://70ecorn5enmr" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File7.png" id="20_ce7pi"]
[ext_resource type="Texture2D" uid="uid://cnyk8gk74ioel" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File8.png" id="21_78p4m"]
[ext_resource type="Texture2D" uid="uid://n4yb66vf3v2y" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File9.png" id="22_n80dc"]
[ext_resource type="Texture2D" uid="uid://dvb7ej0nc4a2j" path="res://assets/Sword Slashes/Sword Slashes/White Group Slashes/File10.png" id="23_vocem"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_gyecd"]
frames = 20
speed_scale = 200.0
frame_0/texture = ExtResource("4_u6bq7")
frame_1/texture = ExtResource("5_v2slh")
frame_1/duration = 1.0
frame_2/texture = ExtResource("16_krk36")
frame_2/duration = 1.0
frame_3/texture = ExtResource("17_gdedb")
frame_3/duration = 1.0
frame_4/texture = ExtResource("18_y7316")
frame_4/duration = 1.0
frame_5/texture = ExtResource("19_vrb62")
frame_5/duration = 1.0
frame_6/texture = ExtResource("20_ce7pi")
frame_6/duration = 1.0
frame_7/texture = ExtResource("21_78p4m")
frame_7/duration = 1.0
frame_8/texture = ExtResource("22_n80dc")
frame_8/duration = 1.0
frame_9/texture = ExtResource("23_vocem")
frame_9/duration = 1.0
frame_10/texture = ExtResource("6_8pxwe")
frame_10/duration = 1.0
frame_11/texture = ExtResource("7_i3bpx")
frame_11/duration = 1.0
frame_12/texture = ExtResource("8_fg6ks")
frame_12/duration = 1.0
frame_13/texture = ExtResource("9_hk0g3")
frame_13/duration = 1.0
frame_14/texture = ExtResource("10_kacak")
frame_14/duration = 1.0
frame_15/texture = ExtResource("11_7cg3l")
frame_15/duration = 1.0
frame_16/texture = ExtResource("12_y6ql2")
frame_16/duration = 1.0
frame_17/texture = ExtResource("13_3iwlo")
frame_17/duration = 1.0
frame_18/texture = ExtResource("14_u48ws")
frame_18/duration = 1.0
frame_19/texture = ExtResource("15_12ouc")
frame_19/duration = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ao8py"]
radius = 17.3473
height = 34.6946

[sub_resource type="Animation" id="Animation_7jkxw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprites/IdleCatt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprites/Idle2Catt:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprites/AttackCatt:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprites/Die:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("sprites/DieCatt:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("sprites/HurtCattt:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("sprites/JumpCattt:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("sprites/RunCatt:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("sprites/Sittingg:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("sprites/SleepCatt:frame")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_n6cjp"]
resource_name = "attack"
length = 0.85
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprites/AttackCatt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_5wo25"]
resource_name = "die"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprites/Die:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_iqnsn"]
resource_name = "die_noblood"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprites/DieCatt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_0kted"]
resource_name = "djump"
length = 1.25
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprites/JumpCattt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_2xvf4"]
resource_name = "hurt"
length = 0.68
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprites/HurtCattt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_1cby4"]
resource_name = "idle"
length = 0.65
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprites/IdleCatt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_okpcs"]
resource_name = "idle2"
length = 1.35
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprites/Idle2Catt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_saba2"]
resource_name = "jump"
length = 1.25
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprites/JumpCattt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_yoy75"]
resource_name = "run"
length = 0.68
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprites/RunCatt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_jj60g"]
resource_name = "sitting"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprites/Sittingg:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_wfbgi"]
resource_name = "sleep"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprites/SleepCatt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k3q5g"]
_data = {
"RESET": SubResource("Animation_7jkxw"),
"attack": SubResource("Animation_n6cjp"),
"die": SubResource("Animation_5wo25"),
"die_noblood": SubResource("Animation_iqnsn"),
"djump": SubResource("Animation_0kted"),
"hurt": SubResource("Animation_2xvf4"),
"idle": SubResource("Animation_1cby4"),
"idle2": SubResource("Animation_okpcs"),
"jump": SubResource("Animation_saba2"),
"run": SubResource("Animation_yoy75"),
"sitting": SubResource("Animation_jj60g"),
"sleep": SubResource("Animation_wfbgi")
}

[sub_resource type="LabelSettings" id="LabelSettings_qh4wp"]
font = ExtResource("11_fl8ui")

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_k82fs")

[node name="sprites" type="Node2D" parent="."]

[node name="IdleCatt" type="Sprite2D" parent="sprites"]
texture = ExtResource("1_vm587")
hframes = 7

[node name="Idle2Catt" type="Sprite2D" parent="sprites"]
visible = false
texture = ExtResource("2_x82r7")
hframes = 14

[node name="slash" type="Sprite2D" parent="sprites"]
visible = false
position = Vector2(20, 0)
scale = Vector2(0.1, 0.1)
texture = SubResource("AnimatedTexture_gyecd")

[node name="AttackCatt" type="Sprite2D" parent="sprites"]
visible = false
texture = ExtResource("3_q3igc")
hframes = 9

[node name="Die" type="Sprite2D" parent="sprites"]
visible = false
texture = ExtResource("4_tfdw1")
hframes = 14

[node name="DieCatt" type="Sprite2D" parent="sprites"]
visible = false
texture = ExtResource("5_iavcn")
hframes = 15

[node name="HurtCattt" type="Sprite2D" parent="sprites"]
visible = false
texture = ExtResource("6_4cas1")
hframes = 7

[node name="JumpCattt" type="Sprite2D" parent="sprites"]
visible = false
texture = ExtResource("7_y0fdc")
hframes = 13

[node name="RunCatt" type="Sprite2D" parent="sprites"]
visible = false
texture = ExtResource("8_m148u")
hframes = 7

[node name="Sittingg" type="Sprite2D" parent="sprites"]
visible = false
texture = ExtResource("9_rhhh8")
hframes = 3

[node name="SleepCatt" type="Sprite2D" parent="sprites"]
visible = false
texture = ExtResource("10_e6n4b")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
scale = Vector2(-0.749616, -0.694317)
shape = SubResource("CapsuleShape2D_ao8py")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k3q5g")
}
autoplay = "idle"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="Label" type="Label" parent="Camera2D"]
visible = false
offset_left = -286.0
offset_top = -160.0
offset_right = -246.0
offset_bottom = -137.0
label_settings = SubResource("LabelSettings_qh4wp")

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_uisnj")
volume_db = -10.0

[node name="attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_637ts")
volume_db = -10.0
